contrast fix

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ ul, ol {
 h1, h2, h3 {
   color: white;
   text-align: center;
+
 }
 
 hr {
@@ -25,7 +26,8 @@ hr {
 /* makes horizontal rule shorter */
 
 header, footer {
-  background-color: #D9A630;
+  font-size: 20px;
+  background-color: #996B00;
   margin: 15px;
   padding: 2px;
   border-radius: 6px;
@@ -45,7 +47,7 @@ border-radius: 6px;
 
 main article {
    color: white;
-  background-color:rgb(105, 149, 158);
+  background-color:#19524C;
   margin: 30px;
   padding: 5px 5px 10px 5px; 
   border-radius: 6px;
@@ -60,7 +62,7 @@ header, footer, h2, h3 {
   text-transform: lowercase;
 }
 
-a:link {color: rgb(255, 238, 82);}
-a:visited {color: purple}
+a:link {color: #EDD59C;}
+a:visited {color: plum}
 a:hover {color: coral}
 /* link decoration */
